--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -38,7 +38,7 @@
                 font-weight: bold;
             }
 
-            &:active::after {
+            &.active::after {
                 content: '';
                 height: 3px;
                 border-radius: 3px 3px 0 0;
